--- a/grunt-app/app/styles/main.scss
+++ b/grunt-app/app/styles/main.scss
@@ -12,4 +12,8 @@
 @import 'partials/animate';
 @import 'partials/event-view';
 @import 'partials/index';
+@import 'partials/contact';
+@import 'partials/animation';
+@import 'partials/filterView';
+
 
